@@ -2,7 +2,7 @@
 """
 transform OOo file to HTML through XSL
 """
-from zope.interface import implements
+from Products.AROfficeTransforms.config import PLONE_VERSION
 from Products.PortalTransforms.interfaces import itransform
 from Products.PortalTransforms.libtransforms.utils \
     import sansext
@@ -16,7 +16,11 @@ XSL_STYLESHEET = os.path.join(
   os.getcwd(), os.path.dirname(__file__), 'transform_libs/libopendocument/xsl/default', 'document2xhtml.xsl')
 
 class oo2_to_html(commandtransform):
-    implements(itransform)
+    if PLONE_VERSION == 4:
+        from zope.interface import implements
+        implements(itransform)
+    else:
+        __implements__ = itransform
 
     __name__ = 'oo2_to_html'
     inputs = ('application/vnd.oasis.opendocument.text',
