@@ -3,7 +3,7 @@
 transform .ppt file to HTML
 """
 
-from zope.interface import implements
+from Products.AROfficeTransforms.config import PLONE_VERSION
 from Products.PortalTransforms.interfaces import itransform
 
 from powerpoint_ppthtml import document
@@ -13,7 +13,11 @@ import os.path
 
 
 class ppt_to_html:
-    implements(itransform)
+    if PLONE_VERSION == 4:
+        from zope.interface import implements
+        implements(itransform)
+    else:
+        __implements__ = itransform
 
     __name__ = "ppt_to_html"
     inputs   = ("application/vnd.ms-powerpoint",)
