@@ -2,13 +2,17 @@
 """
 transform .doc file to Text through WVWare
 """
-from zope.interface import implements
+from Products.AROfficeTransforms.config import PLONE_VERSION
 from Products.PortalTransforms.interfaces import itransform
 from office_wvware_gen import document
 import os.path
 
 class word_to_text:
-    implements(itransform)
+    if PLONE_VERSION == 4:
+        from zope.interface import implements
+        implements(itransform)
+    else:
+        __implements__ = itransform
 
     __name__ = "word_to_text"
     inputs   = ("application/msword",)
