@@ -2,14 +2,18 @@
 """
 transform zip files to Text through the zipfile library
 """
-from zope.interface import implements
+from Products.AROfficeTransforms.config import PLONE_VERSION
 from Products.PortalTransforms.interfaces import itransform
 from Products.PortalTransforms.libtransforms.commandtransform import commandtransform
 import zipfile
 from string import join
 
 class zip_to_text(commandtransform):
-    implements(itransform)
+    if PLONE_VERSION == 4:
+        from zope.interface import implements
+        implements(itransform)
+    else:
+        __implements__ = itransform
 
     __name__ = "zip_to_text"
     inputs   = ("application/zip","application/x-zip-compressed")
